--- a/demo-dist/index.html
+++ b/demo-dist/index.html
@@ -14,5 +14,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <svg aria-hidden="true" focusable="false" data-rlg-filter="rlg-distort-filter" style="position: absolute; width: 0px; height: 0px; visibility: hidden;"><defs><filter id="rlg-distort-filter"><feTurbulence type="fractalNoise" baseFrequency="0.004 0.0055" numOctaves="2" seed="7" result="distortNoise"></feTurbulence><feGaussianBlur in="distortNoise" stdDeviation="6.5" result="softNoise"></feGaussianBlur><feDisplacementMap in="SourceGraphic" in2="softNoise" scale="48" xChannelSelector="R" yChannelSelector="G"></feDisplacementMap></filter></defs></svg>
   </body>
 </html>
